# abm-python-wrappers

./: .gitignore  Dockerfile  README.md  cloudops_test.py  pyproject.toml
.github/workflows/: pre-commit.yaml  run-pytest-push.yaml  run-pytests.yaml
abmwrappers/: __init__.py  experiment_class.py  plotting.py  utils.py  wrappers.py
abmwrappers/subprocesses/: gather.py  gather_step.py  task.py
docs/: experiments.md  wrappers.md
examples/: azb_config.yaml
examples/gcm_facemask_azure/: azure_docker_handler.py  handler.py  model_run.py
examples/gcm_facemask_azure/input/: config.yaml
tests/: test_experiment.py  test_utils.py
tests/input/: test_config.yaml
tests/output/: experiment_history.pkl
