[project]
name = "abmwrappers"
version = "0.2.1"
description = ""
authors = [{ name = "Team CMEI - CDC/OD/ORR/CFA" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "PyYAML>=6.0.1,<7",
    "pre-commit>=3.7.1,<4",
    "scipy>=1.14.0,<2",
    "pytest>=8.3.4,<9",
    "sobol-seq>=0.2.0,<0.3",
    "cfa-azure",
    "abctools",
    "polars>=1.6.0,<2",
    "griddler",
]

[dependency-groups]
dev = ["coverage>=7.10.2,<8"]

[tool.uv.sources]
cfa-azure = { git = "https://github.com/CDCgov/cfa_azure.git" }
abctools = { git = "https://github.com/CDCgov/abc-calibration-tools.git", branch = "wtk-uv" }
griddler = { git = "https://github.com/CDCgov/pygriddler.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
